# DSAA2

./: CMakeLists.txt  main.cpp  main_g.cpp
common/: colors.hpp  tasks.hpp
task_2_1/: main.cpp
task_2_2/: hashmap.hpp  main.cpp  main_any.cpp  simplehash.hpp
task_2_3/: main.cpp  main_g.cpp
task_2_4/: main.cpp
task_2_5/: main.cpp
task_2_6/: main.cpp
